--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,9 @@
 
     <!-- Site Properties -->
     <title>Homepage - Semantic</title>
+
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
+
     <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
     <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
 
@@ -36,6 +39,7 @@
         .masthead.segment {
             min-height: 700px;
             padding: 1em 0em;
+            background-size: 100%;
         }
         .masthead .logo.item img {
             margin-right: 1em;
@@ -43,12 +47,7 @@
         .masthead .ui.menu .ui.button {
             margin-left: 0.5em;
         }
-        .masthead h1.ui.header {
-            margin-top: 3em;
-            margin-bottom: 0em;
-            font-size: 4em;
-            font-weight: normal;
-        }
+x
         .masthead h2 {
             font-size: 1.7em;
             font-weight: normal;
@@ -189,7 +188,7 @@
 
         <div class="ui text container">
             <h1 class="ui inverted header">
-                rovercode
+                <img id="main_logo" src="/assets/images/logo.png">
             </h1>
             <h2>The accessible classroom robotics system</h2>
             <div class="ui huge primary button">Sign up for updates <i class="right arrow icon"></i></div>
@@ -209,7 +208,7 @@
                     <p>rovercode's lesson plans introduce powerful strategies that empower teachers to help their students debug their logic. And rovercode's block coding interface means no wasted time tracking down syntax errors in your students' code.</p>
                 </div>
                 <div class="six wide right floated column">
-                    <img src="assets/images/wireframe/white-image.png" class="ui large centered bordered rounded image">
+                    <img src="assets/images/flavour.png">
                 </div>
             </div>
             <div class="row">
@@ -225,11 +224,13 @@
         <div class="ui equal width stackable internally celled grid">
             <div class="center aligned row">
                 <div class="column">
+                    <img src="assets/images/sponsor.png" width=300px>
                     <h3>Interested in sponsorship?</h3>
                     <p>Find out how to sponsor rovercode or a rovercode club near you!</p>
                     <a class="ui button">Contact us</a>
                 </div>
                 <div class="column">
+                    <img src="assets/images/contribute.png" width=300px>
                     <h3>Want to contribute?</h3>
                     <p>We're working on exciting things for the rovercode platform, and it's all open-source.</p>
                     <a class="ui button">Check out the docs</a>
@@ -240,6 +241,7 @@
 
     <div class="ui vertical stripe segment">
         <div class="ui text container">
+            <img src="assets/images/excited.png" width=200px>
             <h3 class="ui header">We're excited!</h3>
             <p>rovercode will be available soon. Be sure to sign up for email updates so you're the first to get one.</p>
             <a class="ui large button">Sign up</a>
