--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="shortcut icon" href="assets/images/favicon.png" id="favicon">
 
     <!-- Site Properties -->
-    <title>Homepage - Semantic</title>
+    <title>Rovercode</title>
 
     <link rel="stylesheet" type="text/css" href="/css/index.css">
 
@@ -62,6 +63,7 @@ x
         .ui.vertical.stripe .button + h3,
         .ui.vertical.stripe p + h3 {
             margin-top: 3em;
+
         }
         .ui.vertical.stripe .floated.image {
             clear: both;
@@ -188,7 +190,7 @@ x
 
         <div class="ui text container">
             <h1 class="ui inverted header">
-                <img id="main_logo" src="/assets/images/logo.png">
+                <img id="main_logo" src="/assets/images/logo_white.png">
             </h1>
             <h2>The accessible classroom robotics system</h2>
             <div class="ui huge primary button">Sign up for updates <i class="right arrow icon"></i></div>
