Remove license, add trademark and attribution

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -272,7 +272,7 @@ x
                 </div>
                 <div class="seven wide column">
                     <h4 class="ui inverted header">Want a rover? <a href="#">Sign up for updates!</a></h4>
-                    <p>Be the first to know when rovers are available.</p>
+                    <p>Logo and branding images are trademarks of Rovercode LLC. They were created by <a href="https://www.louisdurrant.co.uk/">Louis Durrant</a>.</p>
                 </div>
             </div>
         </div>
