--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,7 +48,7 @@
         .masthead .ui.menu .ui.button {
             margin-left: 0.5em;
         }
-x
+
         .masthead h2 {
             font-size: 1.7em;
             font-weight: normal;
@@ -153,11 +153,11 @@ x
 <!-- Following Menu -->
 <div class="ui large top fixed hidden menu">
     <div class="ui container">
-        <a class="item">Blog</a>
-        <a class="item">Contributor Info</a>
+        <a href="https://medium.com/rovercode" class="item">Blog</a>
+        <a href="https://twitter.com/rovercode" class="item">Twitter</a>
         <div class="right menu">
             <div class="item">
-                <a class="ui button">Beta Program Log In</a>
+                <a href="https://app.rovercode.com/accounts/login/" class="ui button">Beta Program Log In</a>
             </div>
         </div>
     </div>
@@ -165,9 +165,9 @@ x
 
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
-    <a class="item">Blog</a>
-    <a class="item">Contributor Info</a>
-    <a class="item">Beta Program Log In</a>
+    <a href="https://medium.com/rovercode" class="item">Blog</a>
+    <a href="https://twitter.com/rovercode" class="item">Twitter</a>
+    <a href="https://app.rovercode.com/accounts/login/" class="item">Beta Program Log In</a>
 </div>
 
 
@@ -180,10 +180,10 @@ x
                 <a class="toc item">
                     <i class="sidebar icon"></i>
                 </a>
-                <a class="item">Blog</a>
-                <a class="item">Contributor Info</a>
+                <a href="https://medium.com/rovercode" class="item">Blog</a>
+                <a href="https://twitter.com/rovercode" class="item">Twitter</a>
                 <div class="right item">
-                    <a class="ui inverted button">Beta Program Log In</a>
+                    <a href="https://app.rovercode.com/accounts/login/" class="ui inverted button">Beta Program Log In</a>
                 </div>
             </div>
         </div>
@@ -193,7 +193,7 @@ x
                 <img id="main_logo" src="/assets/images/logo_white.png">
             </h1>
             <h2>The accessible classroom robotics system</h2>
-            <div class="ui huge primary button">Sign up for updates <i class="right arrow icon"></i></div>
+            <a href="http://eepurl.com/dyzIhr" class="ui huge primary button">Sign up for updates <i class="right arrow icon"></i></a>
         </div>
 
     </div>
@@ -202,12 +202,12 @@ x
         <div class="ui middle aligned stackable grid container">
             <div class="row">
                 <div class="eight wide column">
-                    <h3 class="ui header">Every student codes, right from the beginning</h3>
-                    <p>Your rover will come ready for coding, and every student will write their first program in their first ten minutes.</p>
                     <h3 class="ui header">Students learn in community</h3>
-                    <p>Your students can share their programs, remix other students' programs, and ask questions in the rovercode online community: a safe space designed with students in mind.</p>
+                    <p>Your students can share their programs, remix other students' programs, and ask questions in the Rovercode online community: a safe space designed with students in mind.</p>
+                    <h3 class="ui header">Every student codes, right from the beginning</h3>
+                    <p>With zero-hassle set-up, every student will write their first program in their first ten minutes.</p>
                     <h3 class="ui header">No computer science experience needed</h3>
-                    <p>rovercode's lesson plans introduce powerful strategies that empower teachers to help their students debug their logic. And rovercode's block coding interface means no wasted time tracking down syntax errors in your students' code.</p>
+                    <p>Rovercode's lesson plans introduce powerful strategies that empower teachers to help their students debug their logic. And Rovercode's block coding interface means no wasted time tracking down syntax errors in your students' code.</p>
                 </div>
                 <div class="six wide right floated column">
                     <img src="assets/images/flavour.png">
@@ -215,7 +215,7 @@ x
             </div>
             <div class="row">
                 <div class="center aligned column">
-                    <a class="ui huge button">Sign up for updates</a>
+                    <a href="http://eepurl.com/dyzIhr" class="ui huge button">Sign up for updates</a>
                 </div>
             </div>
         </div>
@@ -228,14 +228,14 @@ x
                 <div class="column">
                     <img src="assets/images/sponsor.png" width=300px>
                     <h3>Interested in sponsorship?</h3>
-                    <p>Find out how to sponsor rovercode or a rovercode club near you!</p>
-                    <a class="ui button">Contact us</a>
+                    <p>Find out how to sponsor Rovercode or a Rovercode club near you!</p>
+                    <a href="https://medium.com/rovercode/contact-us-62976a159826" class="ui button">Contact us</a>
                 </div>
                 <div class="column">
                     <img src="assets/images/contribute.png" width=300px>
                     <h3>Want to contribute?</h3>
-                    <p>We're working on exciting things for the rovercode platform, and it's all open-source.</p>
-                    <a class="ui button">Check out the docs</a>
+                    <p>We're working on exciting things for the Rovercode platform, and it's all open-source.</p>
+                    <a href="https://contributor-docs.rovercode.com" class="ui button">Check out the docs</a>
                 </div>
             </div>
         </div>
@@ -245,8 +245,8 @@ x
         <div class="ui text container">
             <img src="assets/images/excited.png" width=200px>
             <h3 class="ui header">We're excited!</h3>
-            <p>rovercode will be available soon. Be sure to sign up for email updates so you're the first to get one.</p>
-            <a class="ui large button">Sign up</a>
+            <p>Rovercode will be available soon. Be sure to sign up for email updates so you're the first to get one.</p>
+            <a href="http://eepurl.com/dyzIhr" class="ui large button">Sign up</a>
         </div>
     </div>
 
@@ -257,21 +257,20 @@ x
                 <div class="three wide column">
                     <h4 class="ui inverted header">About</h4>
                     <div class="ui inverted link list">
-                        <a href="#" class="item">Contact Us</a>
-                        <a href="#" class="item">Who We Are</a>
+                        <a href="https://medium.com/rovercode/contact-us-62976a159826" class="item">Contact Us</a>
+                        <a href="https://medium.com/rovercode/the-team-43f7e052d6e2" class="item">Who We Are</a>
                     </div>
                 </div>
                 <div class="three wide column">
                     <h4 class="ui inverted header">Contributing</h4>
                     <div class="ui inverted link list">
-                        <a href="#" class="item">Contributor Chat</a>
-                        <a href="#" class="item">Contributor Docs</a>
-                        <a href="#" class="item">GitHub</a>
-                        <a href="#" class="item">Upverter</a>
+                        <a href="https://rovercode.zulipchat.com/" class="item">Contributor Chat</a>
+                        <a href="https://contributor-docs.rovercode.com" class="item">Contributor Docs</a>
+                        <a href="https://github.com/rovercode" class="item">GitHub</a>
                     </div>
                 </div>
                 <div class="seven wide column">
-                    <h4 class="ui inverted header">Want a rover? <a href="#">Sign up for updates!</a></h4>
+                    <h4 class="ui inverted header">Want a rover? <a href="http://eepurl.com/dyzIhr">Sign up for updates!</a></h4>
                     <p>Logo and branding images are trademarks of Rovercode LLC. They were created by <a href="https://www.louisdurrant.co.uk/">Louis Durrant</a>.</p>
                 </div>
             </div>
