Update to new tagline

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -192,7 +192,7 @@
             <h1 class="ui inverted header">
                 <img id="main_logo" src="/assets/images/logo_white.png">
             </h1>
-            <h2>The accessible classroom robotics system</h2>
+            <h2>An educational robotics system made for exploring</h2>
             <a href="http://eepurl.com/dyzIhr" class="ui huge primary button">Sign up for updates <i class="right arrow icon"></i></a>
         </div>
 
