Make masthead h2 more readable with background

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -52,6 +52,8 @@
         .masthead h2 {
             font-size: 1.7em;
             font-weight: normal;
+            background-color: rgba(0, 0, 255, 0.7);
+            border-radius: 10px;
         }
 
         .ui.vertical.stripe {
