Change main action button

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -159,7 +159,7 @@
         <a href="https://twitter.com/rovercode" class="item">Twitter</a>
         <div class="right menu">
             <div class="item">
-                <a href="https://app.rovercode.com/accounts/login/" class="ui button">Beta Program Log In</a>
+                <a href="https://go.rovercode.com" class="ui huge primary button">Start coding now! <i class="right arrow icon"></i></a>
             </div>
         </div>
     </div>
@@ -169,7 +169,7 @@
 <div class="ui vertical inverted sidebar menu">
     <a href="https://medium.com/rovercode" class="item">Blog</a>
     <a href="https://twitter.com/rovercode" class="item">Twitter</a>
-    <a href="https://app.rovercode.com/accounts/login/" class="item">Beta Program Log In</a>
+    <a href="https://go.rovercode.com" class="ui huge primary button">Start coding now! <i class="right arrow icon"></i></a>
 </div>
 
 
@@ -185,7 +185,7 @@
                 <a href="https://medium.com/rovercode" class="item">Blog</a>
                 <a href="https://twitter.com/rovercode" class="item">Twitter</a>
                 <div class="right item">
-                    <a href="https://app.rovercode.com/accounts/login/" class="ui inverted button">Beta Program Log In</a>
+                    <a href="https://go.rovercode.com" class="ui huge primary button">Start coding now! <i class="right arrow icon"></i></a>
                 </div>
             </div>
         </div>
@@ -195,7 +195,7 @@
                 <img id="main_logo" src="/assets/images/logo_white.png">
             </h1>
             <h2>An educational robotics system made for exploring</h2>
-            <a href="http://eepurl.com/dyzIhr" class="ui huge primary button">Sign up for updates <i class="right arrow icon"></i></a>
+            <a href="https://go.rovercode.com" class="ui huge primary button">Start coding now! <i class="right arrow icon"></i></a>
         </div>
 
     </div>
