Change top bar to just underline

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -93,6 +93,10 @@
             display: none;
         }
 
+        .bottom-border {
+            border-width: 0 0 2px 0 !important;
+        }
+
         @media only screen and (max-width: 700px) {
             .ui.fixed.menu {
                 display: none !important;
@@ -178,7 +182,7 @@
     <div class="ui inverted vertical masthead center aligned segment">
 
         <div class="ui container">
-            <div class="ui large secondary inverted pointing menu">
+            <div class="ui large secondary inverted pointing menu bottom-border">
                 <a class="toc item">
                     <i class="sidebar icon"></i>
                 </a>
