Make main action button pink

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -199,7 +199,7 @@
                 <img id="main_logo" src="/assets/images/logo_white.png">
             </h1>
             <h2>An educational robotics system made for exploring</h2>
-            <a href="https://go.rovercode.com" class="ui huge primary button">Start coding now! <i class="right arrow icon"></i></a>
+            <a href="https://go.rovercode.com" class="ui huge secondary button">Start coding now! <i class="right arrow icon"></i></a>
         </div>
 
     </div>
