--- a/layouts/index.html
+++ b/layouts/index.html
@@ -277,7 +277,7 @@
                 </div>
                 <div class="seven wide column">
                     <h4 class="ui inverted header">Want a rover? <a href="http://eepurl.com/dyzIhr">Sign up for updates!</a></h4>
-                    <p>Logo and branding images are trademarks of Rovercode LLC. They were created by <a href="https://www.louisdurrant.co.uk/">Louis Durrant</a>.</p>
+                    <p>Logo and branding images are trademarks of Rovercode LLC. They were originally created by <a href="https://www.louisdurrant.co.uk/">Louis Durrant</a>.</p>
                 </div>
             </div>
         </div>
