Clean up contributor links

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -241,7 +241,7 @@
                     <img src="assets/images/contribute.png" width=300px>
                     <h3>Want to contribute?</h3>
                     <p>We're working on exciting things for the Rovercode platform, and it's all open-source.</p>
-                    <a href="https://contributor-docs.rovercode.com" class="ui button">Check out the docs</a>
+                    <a href="https://github.com/rovercode" class="ui button">Check us out on GitHub</a>
                 </div>
             </div>
         </div>
@@ -251,8 +251,8 @@
         <div class="ui text container">
             <img src="assets/images/excited.png" width=200px>
             <h3 class="ui header">We're excited!</h3>
-            <p>Rovercode will be available soon. Be sure to sign up for email updates so you're the first to get one.</p>
-            <a href="http://eepurl.com/dyzIhr" class="ui large button">Sign up</a>
+            <p>Rovercode is piloting in select schools and clubs in Indianapolis. Want to be one of them?</p>
+            <a href="https://medium.com/rovercode/contact-us-62976a159826" class="ui button">Contact us</a>
         </div>
     </div>
 
@@ -270,13 +270,11 @@
                 <div class="three wide column">
                     <h4 class="ui inverted header">Contributing</h4>
                     <div class="ui inverted link list">
-                        <a href="https://rovercode.zulipchat.com/" class="item">Contributor Chat</a>
-                        <a href="https://contributor-docs.rovercode.com" class="item">Contributor Docs</a>
                         <a href="https://github.com/rovercode" class="item">GitHub</a>
                     </div>
                 </div>
                 <div class="seven wide column">
-                    <h4 class="ui inverted header">Want a rover? <a href="http://eepurl.com/dyzIhr">Sign up for updates!</a></h4>
+                    <h4 class="ui inverted header">Not sure how to get started? <a href="https://go.rovercode.com">Click here to start coding!</a></h4>
                     <p>Logo and branding images are trademarks of Rovercode LLC. They were originally created by <a href="https://www.louisdurrant.co.uk/">Louis Durrant</a>.</p>
                 </div>
             </div>
