Remove inverted navbar completely

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -93,10 +93,6 @@
             display: none;
         }
 
-        .bottom-border {
-            border-width: 0 0 2px 0 !important;
-        }
-
         @media only screen and (max-width: 700px) {
             .ui.fixed.menu {
                 display: none !important;
@@ -159,8 +155,6 @@
 <!-- Following Menu -->
 <div class="ui large top fixed hidden menu">
     <div class="ui container">
-        <a href="https://medium.com/rovercode" class="item">Blog</a>
-        <a href="https://twitter.com/rovercode" class="item">Twitter</a>
         <div class="right menu">
             <div class="item">
                 <a href="https://go.rovercode.com" class="ui huge primary button">Start coding now! <i class="right arrow icon"></i></a>
@@ -171,8 +165,6 @@
 
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
-    <a href="https://medium.com/rovercode" class="item">Blog</a>
-    <a href="https://twitter.com/rovercode" class="item">Twitter</a>
     <a href="https://go.rovercode.com" class="ui huge primary button">Start coding now! <i class="right arrow icon"></i></a>
 </div>
 
@@ -180,19 +172,6 @@
 <!-- Page Contents -->
 <div class="pusher">
     <div class="ui inverted vertical masthead center aligned segment">
-
-        <div class="ui container">
-            <div class="ui large secondary inverted pointing menu bottom-border">
-                <a class="toc item">
-                    <i class="sidebar icon"></i>
-                </a>
-                <a href="https://medium.com/rovercode" class="item">Blog</a>
-                <a href="https://twitter.com/rovercode" class="item">Twitter</a>
-                <div class="right item">
-                    <a href="https://go.rovercode.com" class="ui huge primary button">Start coding now! <i class="right arrow icon"></i></a>
-                </div>
-            </div>
-        </div>
 
         <div class="ui text container">
             <h1 class="ui inverted header">
@@ -265,6 +244,7 @@
                     <div class="ui inverted link list">
                         <a href="https://medium.com/rovercode/contact-us-62976a159826" class="item">Contact Us</a>
                         <a href="https://medium.com/rovercode/the-team-43f7e052d6e2" class="item">Who We Are</a>
+                        <a href="https://twitter.com/@rovercode" class="item">Twitter</a>
                     </div>
                 </div>
                 <div class="three wide column">
