--- a/layouts/index.html
+++ b/layouts/index.html
@@ -52,6 +52,8 @@
         .masthead h2 {
             font-size: 1.7em;
             font-weight: normal;
+            background-color: rgba(0, 0, 255, 0.7);
+            border-radius: 10px;
         }
 
         .ui.vertical.stripe {
@@ -153,11 +155,9 @@
 <!-- Following Menu -->
 <div class="ui large top fixed hidden menu">
     <div class="ui container">
-        <a href="https://medium.com/rovercode" class="item">Blog</a>
-        <a href="https://twitter.com/rovercode" class="item">Twitter</a>
         <div class="right menu">
             <div class="item">
-                <a href="https://app.rovercode.com/accounts/login/" class="ui button">Beta Program Log In</a>
+                <a href="https://go.rovercode.com" class="ui huge primary button">Start coding now! <i class="right arrow icon"></i></a>
             </div>
         </div>
     </div>
@@ -165,9 +165,7 @@
 
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
-    <a href="https://medium.com/rovercode" class="item">Blog</a>
-    <a href="https://twitter.com/rovercode" class="item">Twitter</a>
-    <a href="https://app.rovercode.com/accounts/login/" class="item">Beta Program Log In</a>
+    <a href="https://go.rovercode.com" class="ui huge primary button">Start coding now! <i class="right arrow icon"></i></a>
 </div>
 
 
@@ -175,25 +173,12 @@
 <div class="pusher">
     <div class="ui inverted vertical masthead center aligned segment">
 
-        <div class="ui container">
-            <div class="ui large secondary inverted pointing menu">
-                <a class="toc item">
-                    <i class="sidebar icon"></i>
-                </a>
-                <a href="https://medium.com/rovercode" class="item">Blog</a>
-                <a href="https://twitter.com/rovercode" class="item">Twitter</a>
-                <div class="right item">
-                    <a href="https://app.rovercode.com/accounts/login/" class="ui inverted button">Beta Program Log In</a>
-                </div>
-            </div>
-        </div>
-
         <div class="ui text container">
             <h1 class="ui inverted header">
                 <img id="main_logo" src="/assets/images/logo_white.png">
             </h1>
             <h2>An educational robotics system made for exploring</h2>
-            <a href="http://eepurl.com/dyzIhr" class="ui huge primary button">Sign up for updates <i class="right arrow icon"></i></a>
+            <a href="https://go.rovercode.com" class="ui huge secondary button">Start coding now! <i class="right arrow icon"></i></a>
         </div>
 
     </div>
@@ -235,7 +220,7 @@
                     <img src="assets/images/contribute.png" width=300px>
                     <h3>Want to contribute?</h3>
                     <p>We're working on exciting things for the Rovercode platform, and it's all open-source.</p>
-                    <a href="https://contributor-docs.rovercode.com" class="ui button">Check out the docs</a>
+                    <a href="https://github.com/rovercode" class="ui button">Check us out on GitHub</a>
                 </div>
             </div>
         </div>
@@ -245,8 +230,8 @@
         <div class="ui text container">
             <img src="assets/images/excited.png" width=200px>
             <h3 class="ui header">We're excited!</h3>
-            <p>Rovercode will be available soon. Be sure to sign up for email updates so you're the first to get one.</p>
-            <a href="http://eepurl.com/dyzIhr" class="ui large button">Sign up</a>
+            <p>Rovercode is piloting in select schools and clubs in Indianapolis. Want to be one of them?</p>
+            <a href="https://medium.com/rovercode/contact-us-62976a159826" class="ui button">Contact us</a>
         </div>
     </div>
 
@@ -259,19 +244,18 @@
                     <div class="ui inverted link list">
                         <a href="https://medium.com/rovercode/contact-us-62976a159826" class="item">Contact Us</a>
                         <a href="https://medium.com/rovercode/the-team-43f7e052d6e2" class="item">Who We Are</a>
+                        <a href="https://twitter.com/@rovercode" class="item">Twitter</a>
                     </div>
                 </div>
                 <div class="three wide column">
                     <h4 class="ui inverted header">Contributing</h4>
                     <div class="ui inverted link list">
-                        <a href="https://rovercode.zulipchat.com/" class="item">Contributor Chat</a>
-                        <a href="https://contributor-docs.rovercode.com" class="item">Contributor Docs</a>
                         <a href="https://github.com/rovercode" class="item">GitHub</a>
                     </div>
                 </div>
                 <div class="seven wide column">
-                    <h4 class="ui inverted header">Want a rover? <a href="http://eepurl.com/dyzIhr">Sign up for updates!</a></h4>
-                    <p>Logo and branding images are trademarks of Rovercode LLC. They were created by <a href="https://www.louisdurrant.co.uk/">Louis Durrant</a>.</p>
+                    <h4 class="ui inverted header">Not sure how to get started? <a href="https://go.rovercode.com">Click here to start coding!</a></h4>
+                    <p>Logo and branding images are trademarks of Rovercode LLC. They were originally created by <a href="https://www.louisdurrant.co.uk/">Louis Durrant</a>.</p>
                 </div>
             </div>
         </div>
