--- a/layouts/index.html
+++ b/layouts/index.html
@@ -177,7 +177,7 @@
             <h1 class="ui inverted header">
                 <img id="main_logo" src="/assets/images/logo_white.png">
             </h1>
-            <h2>An educational robotics system made for exploring</h2>
+            <h2>This is a preview of some altered text.</h2>
             <a href="https://go.rovercode.com" class="ui huge secondary button">Start coding now! <i class="right arrow icon"></i></a>
         </div>
 
